--- a/index.html
+++ b/index.html
@@ -3,86 +3,51 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Projet Maquette – Polytech Tours</title>
+<title>Projet Maquette - Polytech Tours</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
-    <div class="logo-container">
-        <img src="https://upload.wikimedia.org/wikipedia/fr/thumb/6/6f/Logo_Polytech.svg/320px-Logo_Polytech.svg.png" class="logo">
-        <span>Polytech Tours</span>
-    </div>
-
-    <nav>
-        <a href="index.html">Accueil</a>
-        <a href="specialites.html">Spécialités</a>
-        <a href="https://www.polytech.univ-tours.fr/" target="_blank">Site Officiel</a>
-    </nav>
+<img src="Logo_Polytech_Tours.svg" class="logo">
+<nav>
+<a href="index.html">Accueil</a>
+<a href="specialites.html">Spécialités</a>
+<a href="https://www.polytech.univ-tours.fr/" target="_blank">Site Officiel</a>
+</nav>
 </header>
 
 <section class="hero">
-    <div class="hero-content">
-        <h1>Une Maquette Interactive au Cœur des Spécialités d’Ingénierie</h1>
-        <p>
-            Un projet innovant illustrant les domaines d’excellence
-            de Polytech Tours à travers une représentation technique et pédagogique.
-        </p>
-        <a href="specialites.html" class="btn-primary">Découvrir les spécialités</a>
-    </div>
+<div class="hero-content">
+<h1>Maquette des Spécialités d’Ingénierie</h1>
+<p>
+Un projet pédagogique mettant en valeur les 6 spécialités de Polytech Tours à travers une représentation technique et concrète.
+</p>
+<a href="specialites.html" class="btn-main">
+Découvrir les spécialités
+</a>
+</div>
 </section>
 
-<section class="about reveal">
-    <div class="text">
-        <h2>Polytech Tours</h2>
-        <p>
-            École publique d’ingénieurs reconnue pour son excellence académique,
-            Polytech Tours forme des ingénieurs capables d’innover
-            dans des secteurs technologiques stratégiques.
-        </p>
-    </div>
-    <div class="image">
-        <img src="https://images.unsplash.com/photo-1581093588401-22a9b3c1d1c4">
-    </div>
+<section>
+<h2>Présentation de l'École</h2>
+<p>
+Polytech Tours est une école d’ingénieurs publique reconnue pour son excellence académique et son engagement dans l’innovation scientifique et technologique.
+</p>
 </section>
 
-<section class="project reveal">
-    <h2>Notre Projet de Maquette</h2>
-    <p>
-        Cette maquette a été conçue pour représenter concrètement les six spécialités
-        du cycle ingénieur. Chaque zone symbolise un domaine technique spécifique,
-        avec des éléments illustrant les technologies, applications industrielles
-        et innovations associées.
-    </p>
-    <p>
-        L’objectif pédagogique est de transformer des concepts scientifiques
-        en une représentation visuelle structurée, combinant modélisation,
-        conception et réflexion technique.
-    </p>
-</section>
-
-<section class="stats reveal">
-    <div class="stat">
-        <div class="counter" data-target="6">0</div>
-        <p>Spécialités</p>
-    </div>
-    <div class="stat">
-        <div class="counter" data-target="5">0</div>
-        <p>Années d'ingénierie</p>
-    </div>
-    <div class="stat">
-        <div class="counter" data-target="100">0</div>
-        <p>% Innovation</p>
-    </div>
+<section>
+<h2>Notre Projet</h2>
+<p>
+Notre maquette vise à représenter visuellement et concrètement les spécialités proposées par l’école. 
+Elle met en avant les compétences techniques, les domaines d’application et les innovations développées au sein de chaque formation.
+</p>
 </section>
 
 <footer>
-    <p>© 2026 Projet Maquette – Polytech Tours</p>
-    <p><a href="https://www.polytech.univ-tours.fr/" target="_blank">Accéder au site officiel</a></p>
+© 2026 Projet Maquette – Polytech Tours
 </footer>
 
 <script src="script.js"></script>
 </body>
 </html>
-
