--- a/spe2.html
+++ b/spe2.html
@@ -9,10 +9,7 @@
 <body>
 
 <header>
-<div class="logo-container">
-<img src="https://upload.wikimedia.org/wikipedia/fr/thumb/6/6f/Logo_Polytech.svg/320px-Logo_Polytech.svg.png" class="logo">
-<span>Polytech Tours</span>
-</div>
+<img src="Logo_Polytech_Tours.svg" class="logo">
 <nav>
 <a href="index.html">Accueil</a>
 <a href="specialites.html">Spécialités</a>
@@ -20,32 +17,29 @@
 </nav>
 </header>
 
-<section class="spe-detail reveal">
-<h1>Génie de l'aménagement et de l'environnement</h1>
+<section>
+<h2>Génie de l'aménagement et de l'environnement</h2>
+
+<img src="spe2.jpg" class="spe-image">
 
 <p>
-Cette formation prépare des ingénieurs capables de concevoir
-des projets durables liés à l’urbanisme, aux territoires
-et à la gestion environnementale.
+Cette spécialité forme des ingénieurs capables de concevoir des projets d’aménagement durable en intégrant les enjeux environnementaux, énergétiques et territoriaux.
 </p>
-
-<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/genie-de-lamenagement-et-de-lenvironnement"
-target="_blank" class="btn-primary">
-Voir la spécialité sur le site officiel
-</a>
 
 <h2>Représentation dans la maquette</h2>
 <p>
-Nous avons représenté cette spécialité par une zone urbaine
-miniature intégrant espaces verts, bâtiments et infrastructures,
-symbolisant la gestion durable des territoires.
+Dans notre maquette, cette spécialité est représentée par des zones urbaines, des espaces verts et des infrastructures écologiques illustrant le développement durable.
 </p>
 
-<img src="https://images.unsplash.com/photo-1505842465776-3bfd188b0ff8" class="spe-img">
+<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/genie-de-lamenagement-et-de-lenvironnement"
+target="_blank" class="btn-officiel">
+Voir la spécialité sur le site officiel
+</a>
+
 </section>
 
 <footer>
-<p>© 2026 Projet Maquette – Polytech Tours</p>
+© 2026 Projet Maquette – Polytech Tours
 </footer>
 
 <script src="script.js"></script>
