--- a/spe3.html
+++ b/spe3.html
@@ -9,10 +9,7 @@
 <body>
 
 <header>
-<div class="logo-container">
-<img src="https://upload.wikimedia.org/wikipedia/fr/thumb/6/6f/Logo_Polytech.svg/320px-Logo_Polytech.svg.png" class="logo">
-<span>Polytech Tours</span>
-</div>
+<img src="Logo_Polytech_Tours.svg" class="logo">
 <nav>
 <a href="index.html">Accueil</a>
 <a href="specialites.html">Spécialités</a>
@@ -20,31 +17,29 @@
 </nav>
 </header>
 
-<section class="spe-detail reveal">
-<h1>Informatique</h1>
+<section>
+<h2>Informatique</h2>
+
+<img src="spe3.jpg" class="spe-image">
 
 <p>
-Formation axée sur le développement logiciel,
-l’intelligence artificielle, la cybersécurité
-et les systèmes distribués.
+La spécialité Informatique forme des ingénieurs spécialisés en développement logiciel, intelligence artificielle, cybersécurité et systèmes numériques.
 </p>
-
-<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/informatique"
-target="_blank" class="btn-primary">
-Voir la spécialité sur le site officiel
-</a>
 
 <h2>Représentation dans la maquette</h2>
 <p>
-Un module simulant un réseau informatique avec flux de données,
-symbolisant la connectivité et le traitement numérique.
+Dans notre maquette, cette spécialité est illustrée par des systèmes programmés, des réseaux simulés et des modules intelligents.
 </p>
 
-<img src="https://images.unsplash.com/photo-1518770660439-4636190af475" class="spe-img">
+<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/informatique"
+target="_blank" class="btn-officiel">
+Voir la spécialité sur le site officiel
+</a>
+
 </section>
 
 <footer>
-<p>© 2026 Projet Maquette – Polytech Tours</p>
+© 2026 Projet Maquette – Polytech Tours
 </footer>
 
 <script src="script.js"></script>
