--- a/spe4.html
+++ b/spe4.html
@@ -3,16 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Informatique et systèmes intelligents embarqués</title>
+<title>Informatique et systèmes intelligents embarqués (en apprentissage)</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-<div class="logo-container">
-<img src="https://upload.wikimedia.org/wikipedia/fr/thumb/6/6f/Logo_Polytech.svg/320px-Logo_Polytech.svg.png" class="logo">
-<span>Polytech Tours</span>
-</div>
+<img src="Logo_Polytech_Tours.svg" class="logo">
 <nav>
 <a href="index.html">Accueil</a>
 <a href="specialites.html">Spécialités</a>
@@ -20,30 +17,29 @@
 </nav>
 </header>
 
-<section class="spe-detail reveal">
-<h1>Informatique et systèmes intelligents embarqués</h1>
+<section>
+<h2>Informatique et systèmes intelligents embarqués (en apprentissage)</h2>
+
+<img src="spe4.jpg" class="spe-image">
 
 <p>
-Spécialité en apprentissage orientée vers les systèmes embarqués,
-objets connectés et intelligence artificielle embarquée.
+Cette spécialité prépare des ingénieurs capables de concevoir des systèmes embarqués intégrant électronique, programmation et automatisation.
 </p>
-
-<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/informatique-et-systemes-intelligents-embarques"
-target="_blank" class="btn-primary">
-Voir la spécialité sur le site officiel
-</a>
 
 <h2>Représentation dans la maquette</h2>
 <p>
-Un système miniature programmable avec capteurs
-symbolise les dispositifs intelligents embarqués.
+La maquette met en avant des microcontrôleurs et systèmes connectés illustrant le fonctionnement des objets intelligents.
 </p>
 
-<img src="https://images.unsplash.com/photo-1581092334493-6d5b3f8d7b4a" class="spe-img">
+<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/informatique-et-systemes-intelligents-embarques"
+target="_blank" class="btn-officiel">
+Voir la spécialité sur le site officiel
+</a>
+
 </section>
 
 <footer>
-<p>© 2026 Projet Maquette – Polytech Tours</p>
+© 2026 Projet Maquette – Polytech Tours
 </footer>
 
 <script src="script.js"></script>
