--- a/spe6.html
+++ b/spe6.html
@@ -3,16 +3,13 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Mécanique et matériaux</title>
+<title>Mécanique et matériaux (par apprentissage)</title>
 <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
 <header>
-<div class="logo-container">
-<img src="https://upload.wikimedia.org/wikipedia/fr/thumb/6/6f/Logo_Polytech.svg/320px-Logo_Polytech.svg.png" class="logo">
-<span>Polytech Tours</span>
-</div>
+<img src="Logo_Polytech_Tours.svg" class="logo">
 <nav>
 <a href="index.html">Accueil</a>
 <a href="specialites.html">Spécialités</a>
@@ -20,30 +17,29 @@
 </nav>
 </header>
 
-<section class="spe-detail reveal">
-<h1>Mécanique et matériaux</h1>
+<section>
+<h2>Mécanique et matériaux (par apprentissage)</h2>
+
+<img src="spe6.jpg" class="spe-image">
 
 <p>
-Spécialité en apprentissage centrée sur l’étude,
-la caractérisation et l’innovation des matériaux industriels.
+Cette spécialité prépare des ingénieurs experts en comportement des matériaux, résistance mécanique et innovation industrielle.
 </p>
-
-<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/mecanique-et-materiaux"
-target="_blank" class="btn-primary">
-Voir la spécialité sur le site officiel
-</a>
 
 <h2>Représentation dans la maquette</h2>
 <p>
-Des échantillons miniatures et une structure mécanique
-symbolisent l’étude des propriétés des matériaux.
+La maquette met en évidence différentes structures et matériaux illustrant les propriétés mécaniques étudiées.
 </p>
 
-<img src="https://images.unsplash.com/photo-1581091012184-5c4e0b5f3b4e" class="spe-img">
+<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/mecanique-et-materiaux"
+target="_blank" class="btn-officiel">
+Voir la spécialité sur le site officiel
+</a>
+
 </section>
 
 <footer>
-<p>© 2026 Projet Maquette – Polytech Tours</p>
+© 2026 Projet Maquette – Polytech Tours
 </footer>
 
 <script src="script.js"></script>
