--- a/specialites.html
+++ b/specialites.html
@@ -3,40 +3,54 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Nos Spécialités</title>
+<title>Spécialités - Polytech Tours</title>
 <link rel="stylesheet" href="style.css">
 </head>
-
 <body>
 
 <header>
-    <div class="logo-container">
-        <img src="https://upload.wikimedia.org/wikipedia/fr/thumb/6/6f/Logo_Polytech.svg/320px-Logo_Polytech.svg.png" class="logo">
-        <span>Polytech Tours</span>
-    </div>
-
-    <nav>
-        <a href="index.html">Accueil</a>
-        <a href="specialites.html">Spécialités</a>
-        <a href="https://www.polytech.univ-tours.fr/" target="_blank">Site Officiel</a>
-    </nav>
+<img src="Logo_Polytech_Tours.svg" class="logo">
+<nav>
+<a href="index.html">Accueil</a>
+<a href="specialites.html">Spécialités</a>
+<a href="https://www.polytech.univ-tours.fr/" target="_blank">Site Officiel</a>
+</nav>
 </header>
 
-<section class="specialites-page">
-    <h1>Les 6 Spécialités</h1>
+<section>
+<h2>Les 6 Spécialités</h2>
 
-    <div class="specialites-grid">
-        <a href="spe1.html" class="spe-card">Electronique et génie électrique</a>
-        <a href="spe2.html" class="spe-card">Génie de l'aménagement et de l'environnement</a>
-        <a href="spe3.html" class="spe-card">Informatique</a>
-        <a href="spe4.html" class="spe-card">Informatique et systèmes intelligents embarqués</a>
-        <a href="spe5.html" class="spe-card">Mécanique et conception des systèmes</a>
-        <a href="spe6.html" class="spe-card">Mécanique et matériaux</a>
-    </div>
+<div class="cards">
+
+<div class="card" data-link="spe1.html">
+<h3>Electronique et génie électrique</h3>
+</div>
+
+<div class="card" data-link="spe2.html">
+<h3>Génie de l'aménagement et de l'environnement</h3>
+</div>
+
+<div class="card" data-link="spe3.html">
+<h3>Informatique</h3>
+</div>
+
+<div class="card" data-link="spe4.html">
+<h3>Informatique et systèmes intelligents embarqués (en apprentissage)</h3>
+</div>
+
+<div class="card" data-link="spe5.html">
+<h3>Mécanique et conception des systèmes</h3>
+</div>
+
+<div class="card" data-link="spe6.html">
+<h3>Mécanique et matériaux (par apprentissage)</h3>
+</div>
+
+</div>
 </section>
 
 <footer>
-<p>© 2026 Projet Maquette – Polytech Tours</p>
+© 2026 Projet Maquette – Polytech Tours
 </footer>
 
 <script src="script.js"></script>
