--- a/spe1.html
+++ b/spe1.html
@@ -9,10 +9,7 @@
 <body>
 
 <header>
-<div class="logo-container">
-<img src="https://upload.wikimedia.org/wikipedia/fr/thumb/6/6f/Logo_Polytech.svg/320px-Logo_Polytech.svg.png" class="logo">
-<span>Polytech Tours</span>
-</div>
+<img src="Logo_Polytech_Tours.svg" class="logo">
 <nav>
 <a href="index.html">Accueil</a>
 <a href="specialites.html">Spécialités</a>
@@ -20,32 +17,29 @@
 </nav>
 </header>
 
-<section class="spe-detail reveal">
-<h1>Electronique et génie électrique</h1>
+<section>
+<h2>Electronique et génie électrique</h2>
+
+<img src="spe1.jpg" class="spe-image">
 
 <p>
-Cette spécialité forme des ingénieurs capables de concevoir,
-développer et optimiser des systèmes électroniques et électriques
-dans des domaines variés : énergie, télécommunications, systèmes embarqués.
+Cette spécialité forme des ingénieurs capables de concevoir et optimiser des systèmes électroniques et électriques.
 </p>
-
-<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/electronique-et-genie-electrique"
-target="_blank" class="btn-primary">
-Voir la spécialité sur le site officiel
-</a>
 
 <h2>Représentation dans la maquette</h2>
 <p>
-Dans notre maquette, cette spécialité est représentée par un module
-intégrant des circuits simulés, des flux énergétiques et un système
-d’éclairage symbolisant la distribution électrique.
+Dans notre maquette, cette spécialité est illustrée par des circuits miniatures et des modules énergétiques.
 </p>
 
-<img src="https://images.unsplash.com/photo-1581090700227-4c4b8d17d0f2" class="spe-img">
+<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/electronique-et-genie-electrique"
+target="_blank" class="btn-officiel">
+Voir la spécialité sur le site officiel
+</a>
+
 </section>
 
 <footer>
-<p>© 2026 Projet Maquette – Polytech Tours</p>
+© 2026 Projet Maquette – Polytech Tours
 </footer>
 
 <script src="script.js"></script>
