--- a/spe5.html
+++ b/spe5.html
@@ -9,10 +9,7 @@
 <body>
 
 <header>
-<div class="logo-container">
-<img src="https://upload.wikimedia.org/wikipedia/fr/thumb/6/6f/Logo_Polytech.svg/320px-Logo_Polytech.svg.png" class="logo">
-<span>Polytech Tours</span>
-</div>
+<img src="Logo_Polytech_Tours.svg" class="logo">
 <nav>
 <a href="index.html">Accueil</a>
 <a href="specialites.html">Spécialités</a>
@@ -20,30 +17,29 @@
 </nav>
 </header>
 
-<section class="spe-detail reveal">
-<h1>Mécanique et conception des systèmes</h1>
+<section>
+<h2>Mécanique et conception des systèmes</h2>
+
+<img src="spe5.jpg" class="spe-image">
 
 <p>
-Formation dédiée à la conception mécanique,
-la modélisation et l’optimisation de systèmes industriels complexes.
+Cette spécialité forme des ingénieurs capables de concevoir, modéliser et optimiser des systèmes mécaniques complexes.
 </p>
-
-<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/mecanique-et-conception-des-systemes"
-target="_blank" class="btn-primary">
-Voir la spécialité sur le site officiel
-</a>
 
 <h2>Représentation dans la maquette</h2>
 <p>
-Un système mécanique miniature avec engrenages
-symbolise la conception et l’optimisation industrielle.
+Dans la maquette, cette spécialité est représentée par des structures mécaniques et engrenages illustrant la conception industrielle.
 </p>
 
-<img src="https://images.unsplash.com/photo-1581092580497-e0d23cbdf1dc" class="spe-img">
+<a href="https://polytech.univ-tours.fr/version-francaise/navigation/cycle-ingenieur/mecanique-et-conception-des-systemes"
+target="_blank" class="btn-officiel">
+Voir la spécialité sur le site officiel
+</a>
+
 </section>
 
 <footer>
-<p>© 2026 Projet Maquette – Polytech Tours</p>
+© 2026 Projet Maquette – Polytech Tours
 </footer>
 
 <script src="script.js"></script>
